--- a/packages/docs/styles/globals.css
+++ b/packages/docs/styles/globals.css
@@ -1,16 +1,31 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.title {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	border: none;
+	margin-bottom: 1.25rem;
+	font-size: 2rem;
+	font-weight: bold;
+	margin-top: 2rem;
+}
+
+.sub {
+	text-align: center;
 }
