--- a/packages/docs/components/features.module.css
+++ b/packages/docs/components/features.module.css
@@ -22,13 +22,14 @@
 	font-size: 1.1rem;
 	white-space: nowrap;
 }
-@media (max-width: 860px) {
+@media (max-width: 950px) {
 	.feature {
 		padding-left: 0;
-		justify-content: center;
+		justify-content: start;
 	}
-	.feature h4 {
-		font-size: 0.8rem;
+	.features {
+		flex-direction: column;
+		align-items: center;
 	}
 }
 @media (max-width: 660px) {
